# foehn

./: .gitignore  LICENSE  README.md  justfile  meson.build  pyproject.toml
src/bindings/: core.c
src/foehn/: pytorch.py
subprojects/: pmix-abi-pmix-standard-v5.0.wrap  pmix-abi.wrap  pmix.wrap
tests/: conftest.py  test_pmix.py  test_pytorch_init.py
